# Rhea

./: .gitignore  api_client.py  api_input_manager.py  commander.py  config.yaml  controller.py  data_types.py  hardware_interface.py  hardware_interface_simulator.py  main.py  readme.md  robot.service  state_estimator.py  telemetry_manager.py  user_input_manager.py
cpp/: CMakeLists.txt  build.sh
cpp/include/: can_msg_utils.h  commander.h  constants.h  controller.h  data_types.h  hardware_interface.h  pi3hat.cpp  pi3hat.h
cpp/src/: can_msg_utils.cpp  controller.cpp  hardware_interface.cpp  main.cpp
linkage_synthesis/: main.py
old/: generate_lqr_code.ipynb  jumping_utils.py  linkage_utils.py  lqr_symforce.py  main.py  optimization_utils.py  server_test.py  simulated_hardware_interface_mujoco.py
python_old/: canmotorlib.py  hardware_interface.py  hardware_interface_simulator.py  lqr.py  main.py
